--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "leaflet": "^1.6.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-leaflet": "^2.6.0",
+    "react-moment": "^1.1.1",
     "react-scripts": "4.0.3",
     "sass": "^1.35.1",
     "web-vitals": "^1.0.1"
